results/f1faa15224db3dee19dddbb27d8cbd52/err_code.txt
  File "./pyfile.py", line 19
    runitem = MCMCWrapper({fitarraystring}, emcee, m,c, x, , sigma_gauss, [object Object], 1000, 1000, 100, 2, {errval}, fanatapan@yahoo.co.uk, f1faa15224db3dee19dddbb27d8cbd52, {modelStrings},   argslist = (x, 0.65, data)
                                                           ^
SyntaxError: invalid syntax
